--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,5 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ 
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -15,7 +10,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,6 +22,28 @@
 .App-link {
   color: #61dafb;
 }
+.links{
+  color:rgb(49, 48, 48);
+  font-weight: bold;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+}
+.links:hover{
+  text-decoration: none;
+  
+}
+
+.flex-1 {
+  flex: 1 1!important;
+  flex-grow: 1 !important;
+  flex-shrink: 1 !important;
+  flex-basis: 0% !important;
+}
+.comment-icon {
+  margin-top: 10px;
+  margin-right: 10px;
+  text-align: right!important;
+}
+
 
 @keyframes App-logo-spin {
   from {
@@ -36,3 +53,6 @@
     transform: rotate(360deg);
   }
 }
+
+
+
